Test/error/test-if-2.cmm
int main()
{
    if ((a > 1) {
        print(x);
    } else {
        print(y);
    }
}
